# svg2glif

./: Cargo.toml  README.md
examples/: A.glif
src/: lib.rs  main.rs
