[package]
name = "svg2glif"
version = "0.1.0"
edition = "2024"
description = "Convert SVG to UFO glif file"
keywords = ["fonts", "typedesign", "svg","ufo"]
repository = "https://github.com/santhoshtr/svg2glif"
license = "MIT"
authors = ["Santhosh Thottingal <santhosh.thottingal@gmail.com>"]

[dependencies]
usvg = "0.45"
anyhow = "1.0"
norad = {version="0.17", features = ["kurbo"]}
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "svg2glif"
path = "src/bin/main.rs"

[lib]
name = "svg2glif"
path = "src/lib.rs"
