[package]
name = "svg2glif"
version = "0.3.1"
edition = "2024"
description = "Convert SVG to UFO glif file"
keywords = ["fonts", "typedesign", "svg","ufo"]
repository = "https://github.com/santhoshtr/svg2glif"
license = "MIT"
authors = ["Santhosh Thottingal <santhosh.thottingal@gmail.com>"]

[dependencies]
anyhow = "1.0"
norad = {version="0.17", features = ["kurbo"]}
clap = { version = "4.5", features = ["derive"] }
roxmltree = "0.21"
svgtypes = "0.16"

[[bin]]
name = "svg2glif"
path = "src/bin/main.rs"

[lib]
name = "svg2glif"
path = "src/lib.rs"
